Make BooleanConsumer a top-level interface in lib. Attempt at making front arm position after climb more reliable. Add new Routine types and improve Routine system substantially in general--awaiting testing.